tests/invalid/Return_Invalid_8.whiley
import * from whiley.lang.*

function f(bool x, bool y) -> int:
    return x && !y
